fixed scroll in list and table, also footer aligned

--- a/style.css
+++ b/style.css
@@ -6,3 +6,7 @@
 .navigation-background {
     background-color: #EDEFF0;
 }
+
+.footer-text {
+    text-align: center;
+}
